# milli_api

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/application/: main.py
app/application/dependencies/: __init__.py
app/application/mappers/: __init__.py  product_api_mapper.py
app/application/routers/: product_router.py
app/application/schemas/: __init__.py  product.py
app/application/services/: product_service.py
app/application/utils/: __init__.py  cache_helper.py
app/domain/entities/: __init__.py  category.py  coupon.py  product.py
app/domain/exceptions/: __init__.py
app/domain/ports/: __init__.py  cache_adapter.py  category_repository.py  coupon_repository.py  product_repository.py
app/domain/services/: price_calculator.py
app/infrastructure/adapters/: __init__.py
app/infrastructure/adapters/cache/: redis_adapter.py  redis_client.py
app/infrastructure/adapters/db/: category_repository_impl.py  coupon_repository_impl.py  product_repository_impl.py
app/infrastructure/mappers/: __init__.py  category_mapper.py  coupon_mapper.py  product_mapper.py
app/infrastructure/models/: __init__.py  category_model.py  coupon_model.py  product_model.py
app/infrastructure/settings/: config.py
tests/: conftest.py
tests/integration/helpers/: __init__.py  db_helpers.py  redis_helpers.py
tests/unit/application/: __init__.py
tests/unit/application/mappers/: __init__.py  (+1 more)
tests/unit/domain/: __init__.py
(+10 files in other folders)
